blockchain.pb.h

typedef struct _Account {
    pb_callback_t address;
/* @@protoc_insertion_point(struct:Account) */
} Account;
typedef struct _Query {
    pb_callback_t contractAddress;
    pb_callback_t queryinfo;
/* @@protoc_insertion_point(struct:Query) */
} Query;
typedef struct _Receipt {
    pb_callback_t contractAddress;
    pb_callback_t status;
    pb_callback_t ret;
    pb_callback_t txHash;
    pb_callback_t feeUsed;
    pb_callback_t cumulativeFeeUsed;
    pb_callback_t bloom;
    pb_callback_t events;
    uint64_t blockNo;
    pb_callback_t blockHash;
    int32_t txIndex;
    pb_callback_t from;
    pb_callback_t to;
    bool feeDelegation;
    uint64_t gasUsed;
/* @@protoc_insertion_point(struct:Receipt) */
} Receipt;